@@ -3,19 +3,20 @@
  * @package Include/help/ja
  */
 ?>
-<h1>Module Flip Flop Timeout</h1>
+<h1>連続抑制タイムアウト</h1>
 
 <br><br>
 
-If FF threshold is greater than 0, several consecutive values are required to change the status of a module. This works well for synchronous modules, but since asynchronous modules do not send data at regular intervals, checking for consecutive values may not be that useful if they are far away in time. Thus, if FF timeout is greater than 0, consecutive values must occur within the configured time interval.
+連続抑制回数が 0 より大きい場合、モジュールの状態変化が発生するには複数回値が変
+化した状態になる必要があります。これは同期モジュールでは問題無く動きますが、非同期モジュールでは決まった間隔でデータが送信されないため、データ送られてくる間隔が大きく開いた場合に連続抑制は使い勝手がよくありません。このような場合、連続抑制タイムアウトを 0 より大きい値にすることにより、その時間内に連続抑制回数に達した場合という条件付けを行うことができます。
 
-For example, an asynchronous proc module with a FF threshold of 1 and a FF timeout of 600 (10 minutes) would behave in the following way:
+たとえば、非同期 proc モジュールにおいて、連続抑制回数が 1 で連続抑制タイムアウトが 600(10分) の場合は次のようになります。
 
 <br><br>
 <table>
-<th>Time</th>
-<th>Data</th>
-<th>Status change</th>
+<th>時間</th>
+<th>データ</th>
+<th>状態変化</th>
 <tr>
 	<td>12:00</td>
 	<td>1</td>
